--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,10 @@ button {
 
 .Counters {
   display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
 .Counter {
